--- a/API PIXABAY/Diseño.css
+++ b/API PIXABAY/Diseño.css
@@ -32,20 +32,17 @@ body {
     display: block;
     margin-bottom: 5px;
     font-size: 12px; /* Tamaño del texto ajustado */
-    max-width: 100px; /* Ancho máximo de la etiqueta */
-    white-space: nowrap; /* Evita que el texto se envuelva */
-    overflow: hidden; /* Oculta el texto que desborda */
-    text-overflow: ellipsis; /* Agrega puntos suspensivos al final del texto desbordado */
   }
   
   /* Estilos para el campo de entrada de texto */
-  input[type="text"] {
-    width: 100%;
+input[type="text"] {
+    width: 150px; /* Tamaño del campo de entrada ajustado */
     padding: 10px;
     border-radius: 4px;
     border: 1px solid #ccc;
     box-sizing: border-box;
   }
+  
   
   /* Estilos para el botón de búsqueda */
   button[type="submit"] {
@@ -76,4 +73,45 @@ body {
     object-fit: cover; /* Ajusta la imagen dentro del contenedor sin distorsión */
     border-radius: 4px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  }
+
+  /* Estilos para el modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.9);
+  }
+  
+  /* Estilos para la imagen ampliada en el modal */
+  .modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 800px;
+  }
+  
+  /* Estilos para el botón de cierre del modal */
+  .close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #fff;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+    cursor: pointer;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
   }
