--- a/API PIXABAY/Diseño.css
+++ b/API PIXABAY/Diseño.css
@@ -1,4 +1,3 @@
-/* Estilos para el cuerpo de la página */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -6,7 +5,6 @@ body {
     background-color: #f0f0f0;
   }
   
-  /* Contenedor principal */
   .container {
     max-width: 800px;
     margin: 20px auto;
@@ -16,27 +14,23 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
   
-  /* Estilos para el título */
   h2 {
     text-align: center;
   }
   
-  /* Estilos para el formulario */
   form {
     text-align: center;
     margin-bottom: 20px;
   }
   
-  /* Estilos para las etiquetas del formulario */
   label {
     display: block;
     margin-bottom: 5px;
-    font-size: 12px; /* Tamaño del texto ajustado */
+    font-size: 12px; 
   }
   
-  /* Estilos para el campo de entrada de texto */
 input[type="text"] {
-    width: 150px; /* Tamaño del campo de entrada ajustado */
+    width: 150px; 
     padding: 10px;
     border-radius: 4px;
     border: 1px solid #ccc;
@@ -44,7 +38,6 @@ input[type="text"] {
   }
   
   
-  /* Estilos para el botón de búsqueda */
   button[type="submit"] {
     padding: 10px 20px;
     border: none;
@@ -54,28 +47,24 @@ input[type="text"] {
     cursor: pointer;
   }
   
-  /* Estilos para el botón de búsqueda al pasar el ratón */
   button[type="submit"]:hover {
     background-color: #0056b3;
   }
   
-  /* Estilos para el contenedor de resultados */
   #results {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 20px;
   }
   
-  /* Estilos para las imágenes de resultados */
   #results img {
     width: 100%;
-    height: 150px; /* Tamaño fijo para todas las imágenes */
-    object-fit: cover; /* Ajusta la imagen dentro del contenedor sin distorsión */
+    height: 150px; 
+    object-fit: cover; 
     border-radius: 4px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   }
 
-  /* Estilos para el modal */
 .modal {
     display: none;
     position: fixed;
@@ -89,7 +78,6 @@ input[type="text"] {
     background-color: rgba(0,0,0,0.9);
   }
   
-  /* Estilos para la imagen ampliada en el modal */
   .modal-content {
     margin: auto;
     display: block;
@@ -97,7 +85,6 @@ input[type="text"] {
     max-width: 800px;
   }
   
-  /* Estilos para el botón de cierre del modal */
   .close {
     position: absolute;
     top: 15px;
